--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,4 @@ Flask==2.3.0         # The core framework
 Werkzeug>=2.3.0      # Handles HTTP utilities
 Jinja2>=3.1.2
 routes>=2.4.1
+flask-cors==5.0.0
