build: changed to match with docker workflow

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,11 +4,16 @@ project(HuffmanTests)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-# Add GoogleTest
-add_subdirectory(googletest)
+# Set output directories for all builds (Debug, Release, etc.)
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
+set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
+
+# Find Google Test
+find_package(GTest REQUIRED)
 
 # Include directories
-include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
+include_directories(${GTEST_INCLUDE_DIRS})
 include_directories(${CMAKE_SOURCE_DIR}/Huffman_C)
 
 # Create Huffman library
@@ -16,7 +21,11 @@ add_library(huffman_lib Huffman_C/huffman.cpp)
 
 # Add the test executable
 add_executable(huffman_tests tests/huffman_tests.cpp)
-target_link_libraries(huffman_tests huffman_lib gtest gtest_main pthread)
+target_link_libraries(huffman_tests 
+    huffman_lib 
+    GTest::GTest 
+    GTest::Main 
+    pthread)
 
 # Enable testing
 enable_testing()
